argocd/apps/homelab-showcase-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-showcase
  namespace: homelab-showcase
  labels:
    app: homelab-showcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homelab-showcase
  template:
    metadata:
      labels:
        app: homelab-showcase
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.27-alpine
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: html
          configMap:
            name: homelab-showcase-html
