argocd/apps/homelab-showcase-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-showcase
  namespace: homelab-showcase
spec:
  selector:
    app: homelab-showcase
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
